<resources>
    <string name="app_name">HaVagas</string>
    <string name="preencha_seus_dados">Preencha seus dados</string>
    <string name="nomeCompleto">Nome completo</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="telefoneComercial">Comercial</string>
    <string name="telefoneResidencial">Residencial</string>
    <string name="celular">Celular</string>
    <string name="anoFormatura">Ano de formatura</string>
    <string name="anoConclusao">Ano de conclusão</string>
    <string name="instituicao">Instituição</string>
    <string name="tituloMonografia">Título de monografia</string>
    <string name="orientadorMonografia">Orientador da monografia</string>
    <string name="vagasInteresse">Vagas de interesse</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="deseja_receber_emails_de_atualiza_es">Deseja receber emails de atualizações?</string>
    <string name="adicionar_telefone_celular">Adicionar telefone celular</string>
    <string name="feminino">feminino</string>
    <string name="masculino">masculino</string>
    <string name="DataNascimento">Data de nascimento</string>
    <string-array name="formacao">
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>