<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textPersonName"
            android:hint="@string/nomeCompleto"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <CheckBox
            android:id="@+id/receberEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deseja_receber_emails_de_atualiza_es"
            />


        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/telefone"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp">
            <RadioButton
                android:id="@+id/telefoneComercialRd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/telefoneComercial"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:checked="true">
            </RadioButton>
            <RadioButton
                android:id="@+id/telefoneResidencialRd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/telefoneResidencial"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:checked="false">
            </RadioButton>
        </RadioGroup>

        <CheckBox
            android:id="@+id/celularOpCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_telefone_celular"
            />

        <EditText
            android:id="@+id/celularEt"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/celular"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp">
            <RadioButton
                android:id="@+id/femininoRd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:checked="true">
            </RadioButton>
            <RadioButton
                android:id="@+id/masculinoRd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:checked="false">
            </RadioButton>
        </RadioGroup>

        <EditText
            android:id="@+id/dataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/DataNascimento"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formacao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp">
        </Spinner>

        <EditText
            android:id="@+id/anoFormatura"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/anoFormatura"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <EditText
            android:id="@+id/anoConclusao"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/anoConclusao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <EditText
            android:id="@+id/instituicao"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/instituicao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <EditText
            android:id="@+id/tituloMonografia"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/tituloMonografia"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <EditText
            android:id="@+id/orientadorMonografia"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/orientadorMonografia"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <EditText
            android:id="@+id/vagasInteresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/vagasInteresse"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" >
        </EditText>

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:padding="5dp"
            android:layout_margin="5dp">
        </Button>

        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:padding="5dp"
            android:layout_margin="5dp">
        </Button>

    </LinearLayout>

</ScrollView>